--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "devDependencies": {
     "aws-sdk": "^2.276.1",
     "jest": "^23.4.1",
+    "minimist": "^1.2.0",
+    "node-time-uuid": "^0.1.5",
     "standard": "^11.0.1"
   },
   "dependencies": {},
   "standard": {
-    "env": [ "jest" ]
+    "env": [
+      "jest"
+    ]
   }
 }
