--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.276.1",
+    "babar": "^0.2.0",
     "jest": "^23.4.1",
     "minimist": "^1.2.0",
     "node-time-uuid": "^0.1.5",
