--- a/serverless-stock-service/package.json
+++ b/serverless-stock-service/package.json
@@ -8,20 +8,15 @@
     "deploy:info": "head -1 template_params.txt | xargs aws cloudformation describe-stacks",
     "lint": "standard",
     "lint:fix": "standard --fix",
-    "test": "jest --coverage",
-    "test:watch": "npm run test -- --watchAll"
+    "dev:upload-stock-csv": "aws s3 cp ./fixtures/stock.csv s3://$(npm run deploy:info | grep \"StockBucketName\" -A1 | tail -n 1 | cut -d \\\" -f4)/$(date +%s).csv",
+    "dev:invoke:post-transaction": "sam local invoke PostTransactionFunction -e fixtures/post-transaction.json",
+    "dev:invoke:stock-expired": "sam local invoke StockExpiredFunction -e fixtures/stock-expired.json",
+    "dev:invoke:stock-received": "sam local invoke StockReceivedFunction -e fixtures/stock-received.json"
   },
   "devDependencies": {
     "aws-sdk": "^2.276.1",
-    "jest": "^23.4.1",
-    "minimist": "^1.2.0",
-    "node-time-uuid": "^0.1.5",
     "standard": "^11.0.1"
   },
   "dependencies": {},
-  "standard": {
-    "env": [
-      "jest"
-    ]
-  }
+  "standard": {}
 }
